# MemoryLeakDetection

./: CMakeLists.txt  README.md  main.cpp
include/: AllocationStack.h  GNULibCDelegator.h  GnuLibCDelegator.h  LibC.h  LibCDelegator.h  MemoryEntry.h  MemoryLeakDetector.h  MemorySpy.h
lib/gtest-1.8.0/: CMakeLists.txt
lib/gtest-1.8.0/googlemock/: CMakeLists.txt
lib/gtest-1.8.0/googlemock/scripts/: fuse_gmock_files.py  gmock_doctor.py
lib/gtest-1.8.0/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
lib/gtest-1.8.0/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc  gmock_test_utils.py
lib/gtest-1.8.0/googletest/cmake/: internal_utils.cmake
lib/gtest-1.8.0/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample2.cc  sample2.h  sample3-inl.h  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/gtest-1.8.0/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  pump.py  upload.py
lib/gtest-1.8.0/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc  (+2 more)
src/: AllocationStack.cpp  GNULibCDelegator.cpp  GnuLibCDelegator.cpp  LibCDelegator.cpp  MemoryEntry.cpp  MemoryLeakDetector.cpp  MemorySpy.cpp
tests/: CMakeLists.txt  LeakDetectionTest.cpp  LeakDetectionTest.h  LeakDetectionTests.cpp  LeakDetectionWithLeakDetectionFixture.cpp  MemoryLeakInSetUpWithLeakDetectionFixture.cpp
(+79 files in other folders)
